--- a/skills.html
+++ b/skills.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/2ndportfolio.css">
 </head>
 <body>
-    <h1> This is my Website</h1>
-    <h1>Skills I Have</h1>
-    <p>
-
-<h2>C++ Programming</h2>
-Comfortable writing basic programs using loops, functions, and solving simple algorithmic problems.
-
-<h2>HTML Web Basics</h2>
-Capable of creating simple webpages using headings, paragraphs, links, and lists.
-
-<h2>Team Collaboration & Leadership</h2>
-Works well in teams and has experience guiding group projects.
-
-<h2>Bilingual Communication</h2>
-Fluent in English and Bangla; effective in teamwork and academic contexts.</p>
-    <div>
-    <a href="index.html"> Home</a>
-    </div>
+    <h1 class="skills-heading">Areas of Expertise</h1>
+        </nav>
+      </header>
+      <main>
+        <section class="skills-content">
+          <h1>Here are my Top skills</h1>
+          <div class="skills">
+            <div class="skill1"><p>C++ Programming</p></div>
+            <div class="skill2"><p>HTML Web Basics</p></div>
+            <div class="skill3"><p>Bilingual Communication</p></div>
+            <div class="skill4"><p>Team Collaboration & Leadership</p></div>
+            
+          </div>
+        </section>
+      </main>
 </body>
-<footer>@Tanha2003</footer>
+<footer class="footer">
+      <div class="logo"></div>
+  <h2 class="nav-color1">Sidratul<span class="nav-color">Tanha</span></h2><nav class="footer-nav">
+    <a href="index.html">Home</a>
+    <a href="index.html">About</a>
+    <a href="skills.html">How it Works</a>
+    <a href="contact.html">Services</a>
+  </nav></footer>
 </html>
