--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tanha's Portfolio</title>
     <link rel="stylesheet" href="styles/2ndportfolio.css">
 </head>
 <body>
@@ -26,9 +26,11 @@
 <footer class="footer">
       <div class="logo"></div>
   <h2 class="nav-color1">Sidratul<span class="nav-color">Tanha</span></h2><nav class="footer-nav">
+   <p class="description">Ready to elevate your online presence? Contact Me today to discuss<br>
+  </p>
+          <nav class="footer-nav">
     <a href="index.html">Home</a>
     <a href="index.html">About</a>
-    <a href="skills.html">How it Works</a>
-    <a href="contact.html">Services</a>
-  </nav></footer>
+    <a href="skills.html">Services</a>
+  </nav> 
 </html>
