--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tanha's Portfolio</title>
     <link rel="stylesheet" href="styles/2ndportfolio.css">
 </head>
 <body>
@@ -36,15 +36,12 @@
             </div>
           </div>
           <div class="contact-form">
-            <form class="form" action="#" method="POST">
+            <form class="form" action="https://formsubmit.co/tanhasidratul4@gmail.com" method="POST">
               <div class="form-group">
                 <input
-                  type="text"
-                  id="name"
-                  name="name"
-                  placeholder="Your Name"
-                  required
+                   type="text" id="name" name="name" placeholder="Your Name" required
                 />
+                
               </div>
               <div class="form-group">
                 <input
@@ -74,7 +71,8 @@
                 ></textarea>
               </div>
               <button type="submit" class="btn-primary">Send Message</button>
-            </form>
+              
+           </form> 
           </div>
         </div>
       </div>
@@ -84,9 +82,12 @@
 <footer class="footer">
       <div class="logo"></div>
   <h2 class="nav-color1">Sidratul<span class="nav-color">Tanha</span></h2><nav class="footer-nav">
+    <p class="description"> Ready to elevate your online presence? Contact Me today to discuss<br>
+  </p>
+          <nav class="footer-nav">
     <a href="index.html">Home</a>
     <a href="index.html">About</a>
-    <a href="skills.html">How it Works</a>
-    <a href="contact.html">Services</a>
-  </nav></footer>
+    <a href="skills.html">Services</a>
+  </nav> 
+</footer>
 </html>
